--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 16
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
         applicationId "info.ljungqvist.android.widget"
         minSdkVersion 16
-        targetSdkVersion 20
+        targetSdkVersion 16
         versionCode 1
         versionName "1.0"
     }
