--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,11 @@ android {
 }
 
 dependencies {
-//    compile "com.android.support:appcompat-v7:$supportLibVersion"
-//    compile "com.android.support:recyclerview-v7:$supportLibVersion"
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibVersion"
+    compile "com.android.support:cardview-v7:$supportLibVersion"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    compile 'io.github.microutils:kotlin-logging:1.4.4'
+    compile 'sk.baka.slf4j:slf4j-handroid:1.7.25'
 }
