--- a/circular-range-seek-bar/build.gradle
+++ b/circular-range-seek-bar/build.gradle
@@ -1,34 +1,30 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "info.ljungqvist.android.widget"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "0.1"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    compile project(path: ':circular-range-seek-bar')
-
-    implementation "com.android.support:appcompat-v7:$supportLibVersion"
-    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
-    implementation "com.android.support:cardview-v7:$supportLibVersion"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.2.10"
     implementation 'io.github.microutils:kotlin-logging:1.4.6'
     implementation 'sk.baka.slf4j:slf4j-handroid:1.7.25'
+
+    implementation 'com.android.support:support-annotations:27.0.2'
 }
