--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "info.ljungqvist.android.widget"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "0.1"
@@ -31,4 +31,7 @@ dependencies {
 
     implementation 'io.github.microutils:kotlin-logging:1.4.6'
     implementation 'sk.baka.slf4j:slf4j-handroid:1.7.25'
+
+    implementation 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
