--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         applicationId "info.ljungqvist.android.widget"
-        minSdkVersion 16
-        targetSdkVersion 27
+        minSdkVersion 21
+        targetSdkVersion 29
         versionCode 1
         versionName "0.1"
     }
@@ -22,13 +22,13 @@ android {
 }
 
 dependencies {
-    compile project(path: ':circular-range-seek-bar')
+    implementation project(path: ':circular-range-seek-bar')
 
-    implementation "com.android.support:appcompat-v7:$supportLibVersion"
-    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
-    implementation "com.android.support:cardview-v7:$supportLibVersion"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation 'io.github.microutils:kotlin-logging:1.4.6'
-    implementation 'sk.baka.slf4j:slf4j-handroid:1.7.25'
+    implementation 'io.github.microutils:kotlin-logging:1.6.24'
+    implementation 'sk.baka.slf4j:slf4j-handroid:1.7.27'
 }
