--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,13 @@
 
 buildscript {
 
-    ext.kotlin_version = "1.2.10"
-    ext.supportLibVersion = "27.0.2"
+    ext.kotlin_version = "1.3.50"
     repositories {
+        google()
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
 
@@ -22,9 +19,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
     }
 }
