--- a/circular-range-seek-bar/build.gradle
+++ b/circular-range-seek-bar/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 29
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 27
+        minSdkVersion 21
+        targetSdkVersion 29
         versionCode 1
         versionName "0.1"
     }
@@ -22,9 +22,9 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.2.10"
-    implementation 'io.github.microutils:kotlin-logging:1.4.6'
-    implementation 'sk.baka.slf4j:slf4j-handroid:1.7.25'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'io.github.microutils:kotlin-logging:1.6.24'
+    implementation 'sk.baka.slf4j:slf4j-handroid:1.7.27'
 
-    implementation 'com.android.support:support-annotations:27.0.2'
+    implementation 'androidx.annotation:annotation:1.1.0'
 }
